tools/re2c/src/parse/lex_conf.cc
/* Generated by re2c 0.16 on Thu Jan 21 10:47:47 2016 */
#line 1 "../src/parse/lex_conf.re"
#include "src/util/c99_stdint.h"
#include <string>

#include "src/codegen/output.h"
#include "src/conf/opt.h"
#include "src/globals.h"
#include "src/ir/regexp/encoding/enc.h"
#include "src/parse/scanner.h"
#include "src/util/s_to_n32_unsafe.h"

namespace re2c
{

// global re2c config (affects the whole file)
#line 36 "../src/parse/lex_conf.re"


void Scanner::lex_conf ()
{
	tok = cur;

#line 25 "src/parse/lex_conf.cc"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,  64,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		 64,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		128, 128, 128, 128, 128, 128, 128, 128, 
		128, 128,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	if ((lim - cur) < 27) fill(27);
	yych = (unsigned char)*cur;
	switch (yych) {
	case 'c':	goto yy4;
	case 'd':	goto yy5;
	case 'f':	goto yy6;
	case 'i':	goto yy7;
	case 'l':	goto yy8;
	case 's':	goto yy9;
	case 'v':	goto yy10;
	case 'y':	goto yy11;
	default:	goto yy2;
	}
yy2:
	++cur;
yy3:
#line 42 "../src/parse/lex_conf.re"
	{ fatal ((tok - pos) - tchar, "unrecognized configuration"); }
#line 81 "src/parse/lex_conf.cc"
yy4:
	yyaccept = 0;
	yych = (unsigned char)*(ptr = ++cur);
	if (yych == 'g') goto yy12;
	if (yych == 'o') goto yy14;
	goto yy3;
yy5:
	yyaccept = 0;
	yych = (unsigned char)*(ptr = ++cur);
	if (yych == 'e') goto yy15;
	goto yy3;
yy6:
	yyaccept = 0;
	yych = (unsigned char)*(ptr = ++cur);
	if (yych == 'l') goto yy16;
	goto yy3;
yy7:
	yyaccept = 0;
	yych = (unsigned char)*(ptr = ++cur);
	if (yych == 'n') goto yy17;
	goto yy3;
yy8:
	yyaccept = 0;
	yych = (unsigned char)*(ptr = ++cur);
	if (yych == 'a') goto yy18;
	goto yy3;
yy9:
	yyaccept = 0;
	yych = (unsigned char)*(ptr = ++cur);
	if (yych == 't') goto yy19;
	goto yy3;
yy10:
	yyaccept = 0;
	yych = (unsigned char)*(ptr = ++cur);
	if (yych == 'a') goto yy20;
	goto yy3;
yy11:
	yyaccept = 0;
	yych = (unsigned char)*(ptr = ++cur);
	if (yych == 'y') goto yy21;
	goto yy3;
yy12:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy22;
yy13:
	cur = ptr;
	if (yyaccept <= 5) {
		if (yyaccept <= 2) {
			if (yyaccept <= 1) {
				if (yyaccept == 0) {
					goto yy3;
				} else {
					goto yy119;
				}
			} else {
				goto yy161;
			}
		} else {
			if (yyaccept <= 4) {
				if (yyaccept == 3) {
					goto yy206;
				} else {
					goto yy255;
				}
			} else {
				goto yy321;
			}
		}
	} else {
		if (yyaccept <= 8) {
			if (yyaccept <= 7) {
				if (yyaccept == 6) {
					goto yy356;
				} else {
					goto yy377;
				}
			} else {
				goto yy383;
			}
		} else {
			if (yyaccept == 9) {
				goto yy420;
			} else {
				goto yy423;
			}
		}
	}
yy14:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy23;
	goto yy13;
yy15:
	yych = (unsigned char)*++cur;
	if (yych == 'f') goto yy24;
	goto yy13;
yy16:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy25;
	goto yy13;
yy17:
	yych = (unsigned char)*++cur;
	if (yych == 'd') goto yy26;
	goto yy13;
yy18:
	yych = (unsigned char)*++cur;
	if (yych == 'b') goto yy27;
	goto yy13;
yy19:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy28;
	goto yy13;
yy20:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy29;
	goto yy13;
yy21:
	yych = (unsigned char)*++cur;
	if (yych <= 'c') {
		if (yych <= 'a') goto yy13;
		if (yych <= 'b') goto yy30;
		goto yy31;
	} else {
		if (yych == 'f') goto yy32;
		goto yy13;
	}
yy22:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy33;
	goto yy13;
yy23:
	yych = (unsigned char)*++cur;
	if (yych == 'd') goto yy34;
	goto yy13;
yy24:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy35;
	goto yy13;
yy25:
	yych = (unsigned char)*++cur;
	if (yych == 'g') goto yy36;
	goto yy13;
yy26:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy37;
	goto yy13;
yy27:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy38;
	goto yy13;
yy28:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy39;
	if (yych == 't') goto yy40;
	goto yy13;
yy29:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy41;
	goto yy13;
yy30:
	yych = (unsigned char)*++cur;
	if (yych == 'm') goto yy42;
	goto yy13;
yy31:
	yych = (unsigned char)*++cur;
	if (yych == 'h') goto yy43;
	goto yy13;
yy32:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy44;
	goto yy13;
yy33:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy45;
	goto yy13;
yy34:
	yych = (unsigned char)*++cur;
	if (yych <= 'd') {
		if (yych == ':') goto yy46;
		goto yy13;
	} else {
		if (yych <= 'e') goto yy47;
		if (yych == 'p') goto yy48;
		goto yy13;
	}
yy35:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy49;
	goto yy13;
yy36:
	yych = (unsigned char)*++cur;
	if (yych == 's') goto yy50;
	goto yy13;
yy37:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy51;
	goto yy13;
yy38:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy52;
	goto yy13;
yy39:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy53;
	goto yy13;
yy40:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy54;
	goto yy13;
yy41:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy55;
	goto yy13;
yy42:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy56;
	goto yy13;
yy43:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy57;
	goto yy13;
yy44:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy58;
	goto yy13;
yy45:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy59;
	goto yy13;
yy46:
	yych = (unsigned char)*++cur;
	if (yych == 'd') goto yy60;
	if (yych == 'g') goto yy61;
	goto yy13;
yy47:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy62;
	goto yy13;
yy48:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy63;
	goto yy13;
yy49:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy64;
	goto yy13;
yy50:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy65;
	goto yy13;
yy51:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy66;
	goto yy13;
yy52:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy67;
	if (yych == 'p') goto yy68;
	goto yy13;
yy53:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy69;
	goto yy13;
yy54:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy70;
	goto yy13;
yy55:
	yych = (unsigned char)*++cur;
	if (yych == 'b') goto yy71;
	goto yy13;
yy56:
	yych = (unsigned char)*++cur;
	if (yych == 'h') goto yy72;
	goto yy13;
yy57:
	yych = (unsigned char)*++cur;
	if (yych == 'c') goto yy73;
	if (yych == 'e') goto yy74;
	goto yy13;
yy58:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy75;
	goto yy13;
yy59:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy76;
	goto yy13;
yy60:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy77;
	goto yy13;
yy61:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy78;
	goto yy13;
yy62:
	yych = (unsigned char)*++cur;
	if (yych == 'u') goto yy79;
	goto yy13;
yy63:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy80;
	goto yy13;
yy64:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy81;
	goto yy13;
yy65:
	yych = (unsigned char)*++cur;
	if (yych <= 'e') {
		if (yych == '8') goto yy82;
		if (yych <= 'd') goto yy13;
		goto yy82;
	} else {
		if (yych <= 'u') {
			if (yych <= 't') goto yy13;
			goto yy82;
		} else {
			if (yych <= 'v') goto yy13;
			if (yych <= 'x') goto yy82;
			goto yy13;
		}
	}
yy66:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy84;
	goto yy13;
yy67:
	yych = (unsigned char)*++cur;
	if (yych == 'y') goto yy85;
	goto yy13;
yy68:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy86;
	goto yy13;
yy69:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy87;
	goto yy13;
yy70:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy88;
	if (yych == 'n') goto yy89;
	goto yy13;
yy71:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy90;
	goto yy13;
yy72:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy91;
	goto yy13;
yy73:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy92;
	goto yy13;
yy74:
	yych = (unsigned char)*++cur;
	if (yych == 'm') goto yy93;
	goto yy13;
yy75:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy94;
	goto yy13;
yy76:
	yych = (unsigned char)*++cur;
	if (yych == 'h') goto yy95;
	goto yy13;
yy77:
	yych = (unsigned char)*++cur;
	if (yych == 'v') goto yy96;
	goto yy13;
yy78:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy97;
	goto yy13;
yy79:
	yych = (unsigned char)*++cur;
	if (yych == 'm') goto yy98;
	goto yy13;
yy80:
	yych = (unsigned char)*++cur;
	if (yych == 'f') goto yy99;
	goto yy13;
yy81:
	yych = (unsigned char)*++cur;
	if (yych == 'Y') goto yy100;
	goto yy13;
yy82:
	++cur;
#line 45 "../src/parse/lex_conf.re"
	{
		Enc::type_t enc = Enc::ASCII;
		switch (cur[-1])
		{
			case 'e': enc = Enc::EBCDIC; break;
			case 'w': enc = Enc::UCS2;   break;
			case 'x': enc = Enc::UTF16;  break;
			case 'u': enc = Enc::UTF32;  break;
			case '8': enc = Enc::UTF8;   break;
		}
		const int32_t n = lex_conf_number ();
		if (n == 0)
		{
			opts.unset_encoding (enc);
		}
		else if (!opts.set_encoding (enc))
		{
			fatalf ("Cannot set %s encoding: please reset %s encoding first"
				, Enc::name (enc)
				, Enc::name (opts->encoding.type ()));
		}
		return;
	}
#line 496 "src/parse/lex_conf.cc"
yy84:
	yych = (unsigned char)*++cur;
	if (yych <= 'r') goto yy13;
	if (yych <= 's') goto yy101;
	if (yych <= 't') goto yy102;
	goto yy13;
yy85:
	yych = (unsigned char)*++cur;
	if (yych == 'y') goto yy103;
	goto yy13;
yy86:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy104;
	goto yy13;
yy87:
	yych = (unsigned char)*++cur;
	if (yych == 'b') goto yy105;
	goto yy13;
yy88:
	yych = (unsigned char)*++cur;
	if (yych == 'b') goto yy106;
	goto yy13;
yy89:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy107;
	goto yy13;
yy90:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy108;
	goto yy13;
yy91:
	yych = (unsigned char)*++cur;
	if (yych == 'x') goto yy109;
	goto yy13;
yy92:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy111;
	goto yy13;
yy93:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy112;
	goto yy13;
yy94:
	yych = (unsigned char)*++cur;
	if (yych <= 'd') {
		if (yych == 'c') goto yy113;
		goto yy13;
	} else {
		if (yych <= 'e') goto yy114;
		if (yych == 'p') goto yy115;
		goto yy13;
	}
yy95:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy116;
	goto yy13;
yy96:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy117;
	goto yy13;
yy97:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy118;
	goto yy13;
yy98:
	yych = (unsigned char)*++cur;
	if (yych == 'p') goto yy120;
	goto yy13;
yy99:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy121;
	goto yy13;
yy100:
	yych = (unsigned char)*++cur;
	if (yych == 'Y') goto yy122;
	goto yy13;
yy101:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy123;
	goto yy13;
yy102:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy124;
	goto yy13;
yy103:
	yych = (unsigned char)*++cur;
	if (yych == 'F') goto yy125;
	if (yych == 'N') goto yy126;
	goto yy13;
yy104:
	yych = (unsigned char)*++cur;
	if (yych == 'f') goto yy127;
	goto yy13;
yy105:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy128;
	goto yy13;
yy106:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy129;
	goto yy13;
yy107:
	yych = (unsigned char)*++cur;
	if (yych == 'x') goto yy130;
	goto yy13;
yy108:
	yych = (unsigned char)*++cur;
	if (yych == ':') goto yy131;
	goto yy13;
yy109:
	++cur;
#line 95 "../src/parse/lex_conf.re"
	{ opts.set_yybmHexTable (lex_conf_number () != 0); return; }
#line 610 "src/parse/lex_conf.cc"
yy111:
	yych = (unsigned char)*++cur;
	if (yych == 'v') goto yy132;
	goto yy13;
yy112:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy133;
	goto yy13;
yy113:
	yych = (unsigned char)*++cur;
	if (yych == 'h') goto yy135;
	goto yy13;
yy114:
	yych = (unsigned char)*++cur;
	if (yych == 'n') goto yy136;
	goto yy13;
yy115:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy137;
	goto yy13;
yy116:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy138;
	goto yy13;
yy117:
	yych = (unsigned char)*++cur;
	if (yych == 'd') goto yy139;
	goto yy13;
yy118:
	yyaccept = 1;
	yych = (unsigned char)*(ptr = ++cur);
	if (yych == '@') goto yy140;
yy119:
#line 79 "../src/parse/lex_conf.re"
	{ opts.set_condGoto         (lex_conf_string ()); return; }
#line 646 "src/parse/lex_conf.cc"
yy120:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy141;
	goto yy13;
yy121:
	yych = (unsigned char)*++cur;
	if (yych == 'x') goto yy142;
	goto yy13;
yy122:
	yych = (unsigned char)*++cur;
	switch (yych) {
	case 'B':	goto yy144;
	case 'C':	goto yy145;
	case 'D':	goto yy146;
	case 'F':	goto yy147;
	case 'G':	goto yy148;
	case 'L':	goto yy149;
	case 'M':	goto yy150;
	case 'P':	goto yy151;
	case 'R':	goto yy152;
	case 'S':	goto yy153;
	default:	goto yy13;
	}
yy123:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy154;
	goto yy13;
yy124:
	yych = (unsigned char)*++cur;
	if (yych == 'p') goto yy155;
	goto yy13;
yy125:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy157;
	goto yy13;
yy126:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy158;
	goto yy13;
yy127:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy159;
	goto yy13;
yy128:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy160;
	goto yy13;
yy129:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy162;
	goto yy13;
yy130:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy163;
	goto yy13;
yy131:
	yych = (unsigned char)*++cur;
	if (yych == 'y') goto yy164;
	goto yy13;
yy132:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy165;
	goto yy13;
yy133:
	++cur;
#line 138 "../src/parse/lex_conf.re"
	{ opts.set_bEmitYYCh      (lex_conf_number () != 0); return; }
#line 714 "src/parse/lex_conf.cc"
yy135:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy166;
	goto yy13;
yy136:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy167;
	goto yy13;
yy137:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy168;
	goto yy13;
yy138:
	yych = (unsigned char)*++cur;
	if (yych == 's') goto yy169;
	goto yy13;
yy139:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy170;
	goto yy13;
yy140:
	yych = (unsigned char)*++cur;
	if (yych == 'c') goto yy171;
	goto yy13;
yy141:
	yych = (unsigned char)*++cur;
	if (yych == 'e') goto yy172;
	goto yy13;
yy142:
	++cur;
#line 75 "../src/parse/lex_conf.re"
	{ opts.set_condPrefix       (lex_conf_string ()); return; }
#line 747 "src/parse/lex_conf.cc"
yy144:
	yych = (unsigned char)*++cur;
	if (yych == 'A') goto yy173;
	goto yy13;
yy145:
	yych = (unsigned char)*++cur;
	if (yych <= 'S') {
		if (yych == 'O') goto yy174;
		goto yy13;
	} else {
		if (yych <= 'T') goto yy175;
		if (yych <= 'U') goto yy176;
		goto yy13;
	}
yy146:
	yych = (unsigned char)*++cur;
	if (yych == 'E') goto yy177;
	goto yy13;
yy147:
	yych = (unsigned char)*++cur;
	if (yych == 'I') goto yy178;
	goto yy13;
yy148:
	yych = (unsigned char)*++cur;
	if (yych == 'E') goto yy179;
	goto yy13;
yy149:
	yych = (unsigned char)*++cur;
	if (yych == 'E') goto yy180;
	if (yych == 'I') goto yy181;
	goto yy13;
yy150:
	yych = (unsigned char)*++cur;
	if (yych == 'A') goto yy182;
	goto yy13;
yy151:
	yych = (unsigned char)*++cur;
	if (yych == 'E') goto yy183;
	goto yy13;
yy152:
	yych = (unsigned char)*++cur;
	if (yych == 'E') goto yy184;
	goto yy13;
yy153:
	yych = (unsigned char)*++cur;
	if (yych == 'E') goto yy185;
	if (yych == 'K') goto yy186;
	goto yy13;
yy154:
	yych = (unsigned char)*++cur;
	if (yych == 'i') goto yy187;
	goto yy13;
yy155:
	++cur;
#line 123 "../src/parse/lex_conf.re"
	{
		const int32_t n = lex_conf_number ();
		if (n < 0)
		{
			fatal ("configuration 'indent:top' must be nonnegative");
		}
		opts.set_topIndent (static_cast<uint32_t> (n));
		return;
	}
#line 812 "src/parse/lex_conf.cc"
yy157:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy188;
	goto yy13;
yy158:
	yych = (unsigned char)*++cur;
	if (yych == 'x') goto yy189;
	goto yy13;
yy159:
	yych = (unsigned char)*++cur;
	if (yych == 'x') goto yy190;
	goto yy13;
yy160:
	yyaccept = 2;
	yych = (unsigned char)*(ptr = ++cur);
	ctx = cur;
	if (yybm[0+yych] & 64) {
		goto yy192;
	}
	if (yych == '=') goto yy194;
yy161:
#line 151 "../src/parse/lex_conf.re"
	{ out.set_user_start_label (lex_conf_string ()); return; }
#line 836 "src/parse/lex_conf.cc"
yy162:
	yych = (unsigned char)*++cur;
	if (yych == 't') goto yy196;
	goto yy13;
yy163:
	yych = (unsigned char)*++cur;
	if (yych == 'l') goto yy198;
	goto yy13;
yy164:
	yych = (unsigned char)*++cur;
	if (yych == 'y') goto yy199;
	goto yy13;
yy165:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy200;
	goto yy13;
yy166:
	yych = (unsigned char)*++cur;
	if (yych == 'c') goto yy201;
	goto yy13;
yy167:
	yych = (unsigned char)*++cur;
	if (yych == 'b') goto yy202;
	goto yy13;
yy168:
	yych = (unsigned char)*++cur;
	if (yych == 'a') goto yy203;
	goto yy13;
yy169:
	yych = (unsigned char)*++cur;
	if (yych == 'h') goto yy204;
	goto yy13;
yy170:
	yych = (unsigned char)*++cur;
	if (yych == 'r') goto yy205;
	goto yy13;
yy171:
	yych = (unsigned char)*++cur;
	if (yych == 'o') goto yy207;
	goto yy13;
yy172:
	yych = (unsigned char)*++cur;
	if (yych == 'f') goto yy208;
	goto yy13;
yy173:
	yych = (unsigned char)*++cur;
	if (yych == 'C') goto yy209;
	goto yy13;
yy174:
	yych = (unsigned char)*++cur;
	if (yych == 'N') goto yy210;
	goto yy13;
yy175:
	yych = (unsigned char)*++cur;
	if (yych <= 'W') goto yy13;
	if (yych <= 'X') goto yy211;
	if (yych <= 'Y') goto yy212;
	goto yy13;
yy176:
	yych = (unsigned char)*++cur;
	if (yych == 'R') goto yy213;
	goto yy13;
yy177:
	yych = (unsigned char)*++cur;
	if (yych == 'B') goto yy214;
	goto yy13;
yy178:
